[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Dialog/Dialogue.tscn" type="PackedScene" id=2]
[ext_resource path="res://Font/pixel_operator/PixelOperatorMono-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sound/Music/Retro Mystic.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 73
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "DemoOver"
tracks/0/type = "value"
tracks/0/path = NodePath("DemoOver:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("FadePanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("FadePanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "GameOver"
tracks/0/type = "value"
tracks/0/path = NodePath("GameOver:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.25
step = 0.05

[sub_resource type="Animation" id=7]
length = 0.25
step = 0.05

[sub_resource type="DynamicFont" id=8]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ForceDialogPosition" type="CanvasLayer" parent="."]
editor/display_folded = true
offset = Vector2( 640, 600 )
transform = Transform2D( 1, 0, 0, 1, 640, 600 )

[node name="Dialogue" parent="ForceDialogPosition" groups=[
"dialogue",
] instance=ExtResource( 2 )]

[node name="FadePanel" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameOver" type="Panel" parent="."]
editor/display_folded = true
visible = false
modulate = Color( 1, 1, 1, 0.4 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="GameOver"]
margin_left = 472.83
margin_top = 287.189
margin_right = 805.83
margin_bottom = 361.189
custom_fonts/font = SubResource( 1 )
text = "Game Over"

[node name="DemoOver" type="Panel" parent="."]
editor/display_folded = true
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="DemoOver"]
margin_left = 306.229
margin_top = 266.562
margin_right = 972.229
margin_bottom = 417.562
custom_fonts/font = SubResource( 1 )
text = "End Of Demo
Thanks For Playing"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DemoOver = SubResource( 2 )
anims/FadeIn = SubResource( 3 )
anims/FadeOut = SubResource( 4 )
anims/GameOver = SubResource( 5 )
anims/PauseMenuIn = SubResource( 6 )
anims/PauseMenuOut = SubResource( 7 )

[node name="BGAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -16.0
autoplay = true

[node name="Inventory" type="ItemList" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.8427
margin_top = -59.5244
margin_right = 72.8427
margin_bottom = -11.5244
size_flags_horizontal = 3
size_flags_vertical = 3
max_columns = 2
same_column_width = true
icon_scale = 2.0

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 13.2828
margin_top = -77.8153
margin_right = 85.2828
margin_bottom = -61.8153
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Item"
align = 1
